Fixed whitespace bug when highlighting unknown words

--- a/src/app/editor/sheet-overlay/editor-tools/text-editor/text-editor-overlay/highlighted-word/highlighted-word.component.scss
+++ b/src/app/editor/sheet-overlay/editor-tools/text-editor/text-editor-overlay/highlighted-word/highlighted-word.component.scss
@@ -12,3 +12,10 @@ span.word {
 .div-container {
   display: inline-block;
 }
+.whitespace {
+  white-space: pre; /* Forces the browser to render every single space exactly as it is */
+}
+
+.inline-container {
+  display: inline; /* Keeps the words flowing naturally with the spaces */
+}
